--- a/css/estilos.css
+++ b/css/estilos.css
@@ -101,16 +101,10 @@ h3 {
 
  .fondo-reparto {
 	background-image: : url('../img/selva.jpg');
-	overflow: hidden;
-	position: relative;
-	width: 100vw; 
-	height:100vh;
+	background-size: cover;
 
 }
 
-.fondo-reparto {
-	background-color: rgba(0,0,0,0.4);
-}
 
 .pad {padding-top: 10px;}
 
