--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,35 +11,35 @@ font-family: 'Days One', sans-serif;*/
 
 /*--------------------------------------KEYFRAMES-----------------------------------*/
 
-@keyframes claqueta{
+@keyframes camara{
 	0%{background-position: 0;}
 	100%{background-position: -768px;}
 }
 
 @keyframes moving{
 	0%{transform: translateX(0);}
-	100%{transform: translateX(2000px);}
-}*/
+	100%{transform: translateX(1500px);}
+}
+
 @keyframes ben {
 	0% { transform: rotate(0);}
 	100% { transform: rotate(2turn);}
-
 }
 
 /*---------------------------------------GENERALES-----------------------------------*/
 
 
-header {background-color: black; padding-top: 15px; display: flex; justify-content: center;}
+header {background-color: black; padding-top: 15px; text-align: center;}
 
 header img {text-align: center;}
 
-nav {text-align: center;}
+nav {text-align: center; padding-top: 20px;}
 
-nav ul {list-style-type: none; display: flex; }
+nav ul {list-style-type: none; text-align: center; }
 
 nav ul li {display: inline; padding: 10px;}
 
-nav ul li a {color: white; font-size: 18px;}
+nav ul li a {color: white; font-size: 25px;}
 
 nav ul li a:hover {text-decoration: none; color: green;}
 
@@ -67,7 +67,7 @@ footer {background-color: black; padding-top: 20px; display: flex; justify-conte
 
 .fondo-index {background-image: url(../img/poster.jpg);background-size: cover;}
 
-.cosas{display: flex;justify-content: center;align-items: center;padding: 10px; flex-wrap: wrap;}
+.cosas{display: flex;justify-content: center;align-items: center;padding: 10px;}
 
 .cosas > .cositas { width: 45%; padding:20px 24px; min-height:200px;}
 		
@@ -78,10 +78,7 @@ h3 {
 	padding: 10px 0 ;
 }
 
-.triple img {
-	margin-left: 6%;
-	margin-top: 3%;
-}
+.triple {text-align: center;}
 
 .cositas h3 a {
 	color: black;
@@ -106,8 +103,9 @@ h3 {
  .fondo-reparto {
 	background-image: : url('../img/selva.jpg');
 	background-size: cover;
-
 }
+
+.slider {margin-top: 3%; margin-bottom: 3%;}
 
 .pad {padding-top: 10px;}
 
@@ -129,11 +127,9 @@ section .row
 .fondo-sinopsis {
 	background: url('../img/fondo-acerca.jpg');
 	background-size: cover;
-	overflow: hidden;
-	position: relative;
-
-}
- .Sinopsis { background-color: rgba(0,0,0,0.4); margin: 3%;}
+	overflow: hidden;}
+ 
+.Sinopsis { background-color: rgba(0,0,0,0.4); margin: 3%;}
 
 .Sinopsis h1 {font-size: 70px;
 text-align: center; color: green; }
@@ -196,23 +192,15 @@ input[type=submit]:hover {
 	height: 169px;
 	width: 200px;
 	overflow: hidden; 
-	animation-name: camara, moving;
-	animation-duration: 2s , 8s;
-	animation-iteration-count: infinite, infinite;
+	animation-name: moving;
+	animation-duration: 8s;
+	animation-iteration-count: infinite;
 	animation-fill-mode: forwards;
-	animation-timing-function: steps(4), linear;
+	/*animation-timing-function: steps(4), linear;*/
 	animation-delay: 0s;
 }
 
-.ben {
-	position: absolute;
-	top: 200px;
-	width: 5px;
-	right: 30%;
-	animation-name: ben;
-	animation-duration: 10000ms;
-	animation-iteration-count: infinite;
-	animation-timing-function: linear;}
+
 
 /*---------------------------------------VIDEOS-----------------------------------*/
 
@@ -263,6 +251,17 @@ input[type=submit]:hover {
 
 }
 
+.ben {
+	position: absolute;
+	top: 50%;
+	width: 5%;
+	right: 49%;
+	bottom: 1%;
+	animation-name: ben;
+	animation-duration: 10000ms;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;}
+
 
 /*--------------------------------Media Query--------------------------------------------------------*/
 
@@ -277,12 +276,12 @@ input[type=submit]:hover {
 
 /*Medium devices*/
 @media screen and (min-width: 600px) and (max-width: 990px) {
-	
+	/*.cositas {display: flex; flex-wrap: wrap;*/}
 }
 
 /*Small devices*/
 @media screen and (min-width: 0px) and (max-width: 599px) {
-	.cosas {display: flex;justify-content: center;padding: 10px; flex-wrap: wrap;}
+	
 }
 
 
