--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,13 +39,13 @@ nav ul {list-style-type: none; text-align: center; }
 
 nav ul li {display: inline; padding: 10px;}
 
-nav ul li a {color: white; font-size: 25px;}
+nav ul li a, nav ul li span {color: white; font-size: 25px;}
 
 nav ul li a:hover {text-decoration: none; color: green;}
 
 /*desplegable*/
 
-nav ul li ul {position: absolute; left: 54%; top: 8%; text-decoration: none; display: none; z-index: 1;}
+nav ul li ul {position: absolute; left: 40%; top: 12.9%; text-decoration: none; display: none; z-index: 1;}
 
 nav ul li ul a {text-align: center;}
 
@@ -69,7 +69,7 @@ footer {background-color: black; padding-top: 20px; display: flex; justify-conte
 
 .cosas{display: flex;justify-content: center;align-items: center;padding: 10px;}
 
-.cosas > .cositas { width: 45%; padding:20px 24px; min-height:200px;}
+.cosas > .cositas { width: 45%; padding:20px 24px;}
 		
 
 h3 {
@@ -134,7 +134,7 @@ section .row
 .Sinopsis h1 {font-size: 70px;
 text-align: center; color: green; }
 
-.Sinopsis p {font-size: 40px; color: white;}
+.Sinopsis p {font-size: 30px; color: white;}
 
 .rated {display: flex; justify-content: center; padding-bottom: 10px;}
 
