--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,15 +17,22 @@ font-family: 'Days One', sans-serif;*/
 }
 
 @keyframes moving{
-	0%{transform: translateX(0);}
-	100%{transform: translateX(1500px);}
+	0%{transform: translateX(0px);}
+	50%{transform: translateX(380px);}
+	100%{transform: translateX(0px);
+	}
 }
 
 @keyframes ben {
 	0% { transform: rotate(0);}
-	100% { transform: rotate(2turn);}
+	100% { transform: rotate(1turn);}
 }
 
+@keyframes rated-r{
+	0% {transform: scale(1); opacity: 0.5;}
+	50% {transform: scale(1.2); opacity: 1}
+	100% {transform: scale(1); opacity: 0.5;}
+}
 /*---------------------------------------GENERALES-----------------------------------*/
 
 
@@ -59,7 +66,13 @@ nav ul li ul li a:hover {text-decoration: none; color: black;}
 
 footer {background-color: black; padding-top: 20px; display: flex; justify-content: center; flex-direction: row;}
 
+.white {color: white; padding: 5px;}
 
+.center {text-align: center;}
+
+.margin {margin-left: 50%;}
+
+.titulo {font-size: 48px; color: green;}
 
 
 /*---------------------------------------INDEX-----------------------------------*/
@@ -69,41 +82,22 @@ footer {background-color: black; padding-top: 20px; display: flex; justify-conte
 
 .cosas{display: flex;justify-content: center;align-items: center;padding: 10px;}
 
-.cosas > .cositas { width: 45%; padding:20px 24px;}
+.cosas > .cositas { width: 50%; padding:20px 24px; box-sizing: content-box;}
 		
 
-h3 {
-	color: white;
-	background-color: rgba(0,0,0,0.5);
-	padding: 10px 0 ;
-}
+h3 {color: white;background-color: rgba(0,0,0,0.5);padding: 10px 0 ;=}
 
 .triple {text-align: center;}
 
-.cositas h3 a {
-	color: black;
-	text-decoration: none;
-	background-color: white;
-	padding: 15px;
-	margin-top: 13px;
-	display: inline-block;
-	border-radius: 5px;
-	transition-duration: 1s, 2s; 
-	transition-property: background,padding;
-}
+.cositas h3 a {color: black;text-decoration: none;background-color: white;padding: 15px;
+	          margin-top: 13px;display: inline-block; border-radius: 5px;transition-duration: 1s, 2s; 
+	          transition-property: background,padding;}
 
-.cositas h3 a:hover {
-	background: black;
-	padding-right:83.3%;
-	color: white; 
-}
+.cositas h3 a:hover {background: black;padding-right:80%;color: white;}
 
 /*---------------------------------------REPARTO-----------------------------------*/
 
- .fondo-reparto {
-	background-image: : url('../img/selva.jpg');
-	background-size: cover;
-}
+.fondo-reparto {background-image: url(../img/selva.jpg);background-size: cover;}
 
 .slider {margin-top: 3%; margin-bottom: 3%;}
 
@@ -121,31 +115,38 @@ section .fotelis img {
 .fotelis h2 {position: absolute;color: #fff; 
 	background-color: #000;text-align: center; margin-top: 228px; font-size: 16px;}
 
-section .row
+.gente {text-align: center;}
+
+
 /*---------------------------------------SINOPSIS-----------------------------------*/
 
-.fondo-sinopsis {
-	background: url('../img/fondo-acerca.jpg');
-	background-size: cover;
-	overflow: hidden;}
+.fondo-sinopsis {background-image: url(../img/poster.jpg);background-size: cover;}
  
-.Sinopsis { background-color: rgba(0,0,0,0.4); margin: 3%;}
+.Sinopsis { background-color: rgba(0,0,0,0.6); margin: 3%;}
 
 .Sinopsis h1 {font-size: 70px;
 text-align: center; color: green; }
 
 .Sinopsis p {font-size: 30px; color: white;}
 
-.rated {display: flex; justify-content: center; padding-bottom: 10px;}
+.rated {
+text-align: center; 
+margin-bottom: 2%;
+opacity: 0;
+animation-name: rated-r;
+animation-delay: 0s;
+animation-duration: 1.5s;
+animation-iteration-count: infinite; 
+
+}
 
 .rated img {width: 275px; height: 250px; }
+
 /*---------------------------------------CONTACTO-----------------------------------*/
 
 .fondo-contacto {
     background-image: url(../img/selva.jpg);
 	background-size: cover;	
-	width: 100vw; 
-	height:100vh;
 }
 
 
@@ -153,8 +154,7 @@ form {
 	display: flex;
 	justify-content: center;
 	background-color: rgba(0,0,0,0.4);
-	margin-top: 6%;
-	margin-bottom: 6%;
+
 }
 
 label {
@@ -188,7 +188,7 @@ input[type=submit]:hover {
 .camara {
 	background-image: url(../img/camara.png);
 	position: absolute;
-	top: 78%;
+	top: 65.5%;
 	height: 169px;
 	width: 200px;
 	overflow: hidden; 
@@ -199,7 +199,6 @@ input[type=submit]:hover {
 	/*animation-timing-function: steps(4), linear;*/
 	animation-delay: 0s;
 }
-
 
 
 /*---------------------------------------VIDEOS-----------------------------------*/
@@ -218,6 +217,7 @@ input[type=submit]:hover {
 	background-size: cover;	
 	width: 100vw; 
 	height:100vh;
+	overflow: hidden;
 }
 
 .Gracias {text-align: center; padding-top: 100px; }
@@ -251,11 +251,12 @@ input[type=submit]:hover {
 
 }
 
+
 .ben {
 	position: absolute;
-	top: 50%;
-	width: 5%;
-	right: 49%;
+	top: 6%;
+	width: 6%;
+	right: 47%;
 	bottom: 1%;
 	animation-name: ben;
 	animation-duration: 10000ms;
@@ -263,27 +264,12 @@ input[type=submit]:hover {
 	animation-timing-function: linear;}
 
 
-/*--------------------------------Media Query--------------------------------------------------------*/
+.stay {position: absolute; bottom: 0; left: 0; right: 0;}
 
-/*XL devices*/
-@media screen and (min-width: 1201px) {} 
-	
-
-/*Big devices*/
-@media screen and (min-width: 991px) and (max-width: 1200px) {
-	
+.ben img {
+	height: 141.5px;
+	width: 100px;
 }
-
-/*Medium devices*/
-@media screen and (min-width: 600px) and (max-width: 990px) {
-	/*.cositas {display: flex; flex-wrap: wrap;*/}
-}
-
-/*Small devices*/
-@media screen and (min-width: 0px) and (max-width: 599px) {
-	
-}
-
 
 
 
