--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,7 +36,7 @@ font-family: 'Days One', sans-serif;*/
 /*---------------------------------------GENERALES-----------------------------------*/
 
 
-header {background-color: black; padding-top: 15px; text-align: center;}
+header {background-color: black; padding-top: 15px; text-align: center; height: 200px;}
 
 header img {text-align: center;}
 
