--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,6 +74,7 @@ footer {background-color: black; padding-top: 20px; display: flex; justify-conte
 
 .titulo {font-size: 48px; color: green;}
 
+.white2 {color: white;}
 
 /*---------------------------------------INDEX-----------------------------------*/
 
